--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ asgiref==3.5.2
 crispy-bootstrap5==0.7
 Django==4.1.3
 django-crispy-forms==1.14.0
+django-environ==0.10.0
+PyMySQL==1.0.3
 sqlparse==0.4.3
+tzdata==2023.3
+cryptography==40.0.2
